<resources>
    <string name="app_name">AndroidEatItV2Client</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_food_detail">Food Detail</string>
    <string name="menu_cart">Favourite</string>
    <string name="menu_food_list">Food List</string>
    <string name="sign_out">Sign Out</string>
    
    <string name="popular_categories">Categories</string>
    <string name="best_deals">Best Deals</string>
    <string name="menu_menu">Categories</string>
    <string name="action_clear_cart">Clear Favourite</string>
    <string name="action_search">Search</string>
    <string name="sort_by_most_recent">Sort recent</string>
    <string name="sort_by_rating">Sort rating</string>
    <string name="sort_alphabetically_ascending">Sort Alph asc</string>
    <string name="sort_alphabetically_descending">Sort Alph des</string>
    <string name="suggest_a_location">Suggest a Location</string>

</resources>