<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_clear_cart"
        android:orderInCategory="100"
        android:title="@string/action_clear_cart"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_recent_cart"
        android:orderInCategory="100"
        android:title="@string/sort_by_most_recent"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_rate_cart"
        android:orderInCategory="100"
        android:title="@string/sort_by_rating"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_alpha_asc_cart"
        android:orderInCategory="100"
        android:title="@string/sort_alphabetically_ascending"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_alpha_des_cart"
        android:orderInCategory="100"
        android:title="@string/sort_alphabetically_descending"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search_cart"
        android:orderInCategory="100"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always"/>

</menu>